package com.novaperutech.veyra.platform.health.domain.model.queries;

public record GetAllergyByIdQuery(Long id) {
}
