package com.novaperutech.veyra.platform.health.domain.model.valueobjects;

public enum SeverityLevel {
    NORMAL,
    MEDIUM,
    HIGH,
    CRITICAL
}
