package com.novaperutech.veyra.platform.health.domain.model.valueobjects;
public enum TypeOfAllergy {
    FOOD,
    DRUG,
    ENVIRONMENTAL,
    INSECT,
    LATEX,
    CHEMICAL,
    OTHER
}
