package com.novaperutech.veyra.platform.nursing.domain.model.queries;

public record GetAllergiesByResidentIdQuery(Long residentId) {
}
